crates/plotnik-tests/tests/02-parser/recovery_validation/negated_field_in_sequence.txt
Q = (pair {(string) -key})
------------------ DIAGNOSTICS -------------------
error: negated grammar fields cannot appear in sequences
 --> query.ptk:1:21
  |
1 | Q = (pair {(string) -key})
  |                     ^^^^
  |
help: a negated grammar field applies to the enclosing node. Make it a direct child of that node
